--- a/.github/workflows/check-potential-problems.yml
+++ b/.github/workflows/check-potential-problems.yml
@@ -13,16 +13,31 @@ on:
 jobs:
   check-using-precommit:
     name: Check potential problems using pre-commit
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
+    env:
+      PIP_CACHE_DIR: ${{ github.workspace }}/.cache/pip
+      PRE_COMMIT_HOME: ${{ github.workspace }}/.cache/pre-commit
     steps:
       - name: Checking out content from repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Install pre-commit
-        run: pip3 install pre-commit
+      - name: Configure PyPI data cache to speed up continuous integration
+        uses: actions/cache@v3
+        with:
+          key: ${{ runner.os }}-pip
+          path: ${{ env.PIP_CACHE_DIR }}
 
-      - name: Check all files in project using pre-commit
-        run: pre-commit run --all-files --color always
+      - name: >-
+          Configure pre-commit data cache to speed up continuous integration
+        uses: actions/cache@v3
+        with:
+          key: pre-commit|${{ env.PY }}|${{ hashFiles('.pre-commit-config.yaml') }}
+          path: ${{ env.PRE_COMMIT_HOME }}
+
+      - name: Running static analysis program
+        run: |
+          sudo ./continuous-integration/do-static-analysis.install-system-deps.sh
+          ./continuous-integration/do-static-analysis.sh
 
       - name: Send CI result notification to the Telegram channel
         uses: yanzay/notify-telegram@v0.1.0
