docs: fix: Add missing descriptive file header to the Docker Compose config file
Signed-off-by: 林博仁(Buo-ren, Lin) <Buo.Ren.Lin@gmail.com>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,10 @@
+# Docker Compose configuration file
+#
+# References:
+#
+# * Compose file version 3 reference | Docker Docs
+#   https://docs.docker.com/compose/compose-file/compose-file-v3/
+#
 # Copyright 2023 林博仁(Buo-ren, Lin) <Buo.Ren.Lin@gmail.com>
 # SPDX-License-Identifier: CC-BY-SA-4.0
 version: '3'
